bug: nf9 fix display wrapping to next line when device UID is in table (#95)
* style: fix input text wrap on device UID in table

--- a/10-flow-rate-monitor/web-app/src/styles/FlowRateMonitorTable.module.scss
+++ b/10-flow-rate-monitor/web-app/src/styles/FlowRateMonitorTable.module.scss
@@ -49,8 +49,8 @@
 
   :global .ant-table-tbody .editable-input-name,
   :global .ant-table-tbody .editable-button-name {
-    max-width: 150px;
-    width: 150px;
+    max-width: 155px;
+    width: 155px;
     text-align: left;
     padding: 0.25em 0.5em;
     margin: auto;
